syntax = "proto3";

package com.xinle.protolearn;

option java_package = "com.xinle.protolearn";
option java_outer_classname = "xinle";
option java_multiple_files = true;


service StudentService {
    rpc GetRealnameByusername (MyRequest) returns (MyResponse) {
    };

    rpc GetStudentsByAge (StudentAge) returns (stream StudentResponse) {
    }

    rpc GetStudentWrapperByAges(stream StudentAge) returns (StudentResponseList){}

    rpc Bitalk(stream StreamRequest) returns (stream StreamResponse) {}

}


message MyRequest {

    string username = 1;

}

message MyResponse {

    string realname = 2;
}

message StudentAge {
    int32 age = 1;
}

message StudentResponse {

    string name = 1;
    int32 age = 2;
    string city = 3;

}


message StudentResponseList {
    repeated StudentResponse  studentResponse = 1;
}

message StreamRequest{

    string request_info = 1;
}

message StreamResponse{
    string response_info = 1;
}




